Plantilla con cohete
Añadimos un cohete para hacer una animación.

--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -21,7 +21,10 @@
     <main>
         <!-- Contenido de la página principal -->
         <section id="principal">
-            <h1>Planet Wars</h1>
+            <div class="title">
+                <img src="imgs/cohete.png" class="rocket">
+                <h1>Planet Wars</h1>
+            </div>
             <p>
                 El pasaje estándar Lorem Ipsum, usado desde el año 1500.
                 
