--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <header>
-        <img src="imgs/saturno.avif" alt="Saturno" class="logo">
+        <img src="imgs/logo_juego.png" alt="Saturno" class="logo">
         <nav>
             <ul>
-                <li><a href="index.html">Principal</a></li>
+                <li><a href="index.html">Tienda</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <main>
-        <!-- Contenido de la página principal -->
         <section id="principal">
             <div class="title">
-                <img src="imgs/cohete.png" class="rocket">
+                <img src="imgs/cohete.png" alt="Cohete" class="rocket">
                 <h1>Planet Wars</h1>
             </div>
             <p>
