--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="principal.html">Principal</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
-                <li><a href="about.html"></a></li>
+                <li><a href="tienda.html"></a>Tienda</li>
             </ul>
         </nav>
     </header>
