--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -11,9 +11,9 @@
         <img src="imgs/logo_juego.png" alt="Saturno" class="logo">
         <nav>
             <ul>
-                <li><a href="index.html"><button>Tienda</button></a></li>
-                <li><a href="tutorial.html"><button>Tutorial</button></a></li>
-                <li><a href="about.html"><button>About Us</button></a></li>
+                <li><a href="tienda.html">Tienda</a></li>
+                <li><a href="tutorial.html">Tutorial</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
         
@@ -27,7 +27,7 @@
             </div>
         </section>
         <section2 class="section2">
-            <div class="column">
+            <div class="column izquierda">
                 
                 <p>
                     El pasaje estándar Lorem Ipsum, usado desde el año 1500.
@@ -47,10 +47,15 @@
                     "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
                 </p>
             </div>
-            <div class="column">
+            <div class="column derecha">
                 <img src="imgs/logo_juego.png" alt="Imagen" class="imagen-columna">
             </div>
         </section2>
+        <section3 class="section3">
+            <div class="button-container">
+                <a href="https://github.com/KaitoKidd28/Proyect_Arnau_Jose_Mario_Moha/tree/main" class="button primary">Github</a>
+            </div>
+        </section3>
     </main>
 
     <footer>
