--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="principal.html">Principal</a></li>
-                <li><a href="tutorial.html"></a></li>
+                <li><a href="tienda.html">Tienda</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
