Pagina Principal Completa

--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -11,9 +11,10 @@
         <img src="imgs/logo_juego.png" alt="Saturno" class="logo">
         <nav>
             <ul>
-                <li><a href="tienda.html">Tienda</a></li>
+                <li><a href="principal.html">Principal</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="tienda.html">Merchandising</a></li>
             </ul>
         </nav>
         
@@ -24,6 +25,7 @@
             <div class="title">
                 <img src="imgs/cohete.png" alt="Cohete" class="rocket">
                 <h1>Planet Wars</h1>
+                <img src="imgs/cohete.png" alt="Cohete" class="rocket">
             </div>
         </section>
         <section2 class="section2">
@@ -59,7 +61,7 @@
     </main>
 
     <footer>
-        <p>© Copyright</p>
+        <p>2024 - Página realizada con HTML</p>
     </footer>
 </body>
 </html>
