--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -12,8 +12,9 @@
         <nav>
             <ul>
                 <li><a href="principal.html">Principal</a></li>
-                <li><a href="tienda.html">Tienda</a></li>
+                <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="tienda.html">Merchandising</a></li>
             </ul>
         </nav>
     </header>
