--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -25,7 +25,7 @@
             <div class="title">
                 <img src="imgs/cohete.png" alt="Cohete" class="rocket">
                 <h1>Planet Wars</h1>
-                <img src="imgs/cohete.png" alt="Cohete" class="rocket">
+                <img src="imgs/cohete.png" alt="Cohete" class="rocket1">
             </div>
         </section>
         <section2 class="section2">
