--- a/M4/SpaceWars/tienda.html
+++ b/M4/SpaceWars/tienda.html
@@ -31,15 +31,23 @@
                 <img src="imgs/Camiseta.png" alt="Producto 1" class="product-image">
                 <div class="product-info">
                     <h2 class="product-title">Camiseta</h2>
-                    <p class="product-price">$19.99</p>
+                    <p class="product-price">19.99€</p>
                     <p class="product-description">Una breve descripción del producto.</p>
                 </div>
             </div>
             <div class="product-card">
-                <img src="imgs/Pantalones.png" alt="Producto 2" class="product-image">
+                <img src="imgs/Gorra.PNG" alt="Producto 2" class="product-image">
                 <div class="product-info">
-                    <h2 class="product-title">Pantalones</h2>
-                    <p class="product-price">$29.99</p>
+                    <h2 class="product-title">Gorra</h2>
+                    <p class="product-price">9.99€</p>
+                    <p class="product-description">Una breve descripción del producto.</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="imgs/sudadera.PNG" alt="Producto 3" class="product-image">
+                <div class="product-info">
+                    <h2 class="product-title">Sudadera</h2>
+                    <p class="product-price">30.00€</p>
                     <p class="product-description">Una breve descripción del producto.</p>
                 </div>
             </div>
