--- a/M4/SpaceWars/tienda.html
+++ b/M4/SpaceWars/tienda.html
@@ -27,31 +27,76 @@
             </div>
         </section>
         <section id="tienda">
-            <div class="product-card">
-                <img src="imgs/Camiseta.png" alt="Producto 1" class="product-image">
-                <div class="product-info">
-                    <h2 class="product-title">Camiseta</h2>
-                    <p class="product-price">19.99€</p>
-                    <p class="product-description">Una breve descripción del producto.</p>
+            <h2>Productos Disponibles</h2>
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="imgs/Camiseta.png" alt="Producto 1" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Camiseta</h2>
+                        <p class="product-price">19.99€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/Gorra.PNG" alt="Producto 2" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Gorra</h2>
+                        <p class="product-price">9.99€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/sudadera.PNG" alt="Producto 3" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Sudadera</h2>
+                        <p class="product-price">30€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/funda_movil.PNG" alt="Producto 4" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Funda para Iphone 15</h2>
+                        <p class="product-price">5€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
                 </div>
             </div>
-            <div class="product-card">
-                <img src="imgs/Gorra.PNG" alt="Producto 2" class="product-image">
-                <div class="product-info">
-                    <h2 class="product-title">Gorra</h2>
-                    <p class="product-price">9.99€</p>
-                    <p class="product-description">Una breve descripción del producto.</p>
+            <h2>Próximamente</h2>
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="imgs/funda_ordenador.PNG" alt="Producto 5" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Funda Ordenador</h2>
+                        <p class="product-price">20€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/cojin.PNG" alt="Producto 6" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Cojín</h2>
+                        <p class="product-price">20€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/mochila.PNG" alt="Producto 7" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Mochila</h2>
+                        <p class="product-price">30€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/pen.PNG" alt="Producto 8" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">USB</h2>
+                        <p class="product-price">7€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
                 </div>
             </div>
-            <div class="product-card">
-                <img src="imgs/sudadera.PNG" alt="Producto 3" class="product-image">
-                <div class="product-info">
-                    <h2 class="product-title">Sudadera</h2>
-                    <p class="product-price">30.00€</p>
-                    <p class="product-description">Una breve descripción del producto.</p>
-                </div>
-            </div>
-            
         </section>
     </main>
 
