--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -21,12 +21,62 @@
 
     <main>
         <div class="title">
-            <h1>About Us</h1>
+            <h1>Conócenos</h1>
         </div>
+
+        <div class="about-us">
+            <h2>Sobre nosotros</h2>
+            <p>Somos un equipo apasionado de profesionales dedicados a crear experiencias increíbles para nuestros usuarios...</p>
+        </div>
+
+        <div class="team-member">
+            <div class="member-box">
+                <img src="imgs/franco.webp" alt="Miembro 1" class="member-image">
+                <div class="member-info">
+                    <h2>Mario</h2>
+                    <p>Edad: 18</p>
+                    <p>Trabajo: Desarrollador de Aplicaciones Multiplataforma.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="team-member">
+            <div class="member-box">
+                <img src="imgs/Sportacus.jpg" alt="Miembro 2" class="member-image">
+                <div class="member-info">
+                    <h2>Arnau</h2>
+                    <p>Edad: 28</p>
+                    <p>Trabajo: Desarrolladora web</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="team-member">
+            <div class="member-box">
+                <img src="imgs/testino.jpg" alt="Miembro 3" class="member-image">
+                <div class="member-info">
+                    <h2>Jose</h2>
+                    <p>Edad: 28</p>
+                    <p>Trabajo: Desarrolladora web</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="team-member">
+            <div class="member-box">
+                <img src="imgs/negge.webp" alt="Miembro 4" class="member-image">
+                <div class="member-info">
+                    <h2>Mohammad</h2>
+                    <p>Edad: 28</p>
+                    <p>Trabajo: Desarrolladora web</p>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
-        <p>© Copyright</p>
+        <p>2024 - Página realizada con HTML</p>
     </footer>
 </body>
 </html>
