--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -53,11 +53,12 @@
                 <img src="imgs/logo_juego.png" alt="Imagen" class="imagen-columna">
             </div>
         </section2>
-        <section3 class="section3">
-            <div class="button-container">
-                <a href="https://github.com/KaitoKidd28/Proyect_Arnau_Jose_Mario_Moha/tree/main" class="button primary">Github</a>
-            </div>
-        </section3>
+        <section id="github-button">
+            <a href="https://github.com/KaitoKidd28/Proyect_Arnau_Jose_Mario_Moha/tree/main" class="github-btn" target="_blank">
+                <img src="imgs/github.png" alt="GitHub Logo" class="github-logo">
+                <span>Visita nuestro GitHub</span>
+            </a>
+        </section>
     </main>
 
     <footer>
