--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <p>© Copyright</p>
+        <p>2024 - Página realizada con HTML</p>
     </footer>
 </body>
 </html>
