--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo_juego.png" alt="Saturno" class="logo">
+        <img src="imgs/logo.webp" alt="Saturno" class="logo">
         <nav>
             <ul>
                 <li><a href="principal.html">Principal</a></li>
@@ -53,7 +53,7 @@
 
         <div class="team-member">
             <div class="member-box">
-                <img src="imgs/testino.jpg" alt="Miembro 3" class="member-image">
+                <img src="imgs/peruano.png" alt="Miembro 3" class="member-image">
                 <div class="member-info">
                     <h2>Jose</h2>
                     <p>Edad: 28</p>
