--- a/M4/SpaceWars/tienda.html
+++ b/M4/SpaceWars/tienda.html
@@ -30,31 +30,31 @@
             <h2>Productos Disponibles</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="imgs/Camiseta.png" alt="Producto 1" class="product-image">
+                    <img src="imgs/Camiseta.jpg" alt="Producto 1" class="product-image">
                     <div class="product-info">
-                        <h2 class="product-title">Camiseta</h2>
+                        <h2 class="product-title">T-Shirt</h2>
                         <p class="product-price">19.99€</p>
                         <p class="product-description">Una breve descripción del producto.</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="imgs/Gorra.PNG" alt="Producto 2" class="product-image">
+                    <img src="imgs/Gorra.png" alt="Producto 2" class="product-image">
                     <div class="product-info">
-                        <h2 class="product-title">Gorra</h2>
+                        <h2 class="product-title">Cap</h2>
                         <p class="product-price">9.99€</p>
                         <p class="product-description">Una breve descripción del producto.</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="imgs/sudadera.PNG" alt="Producto 3" class="product-image">
+                    <img src="imgs/Sudadera_negra.png" alt="Producto 3" class="product-image">
                     <div class="product-info">
-                        <h2 class="product-title">Sudadera</h2>
+                        <h2 class="product-title">Black Sweatshirt</h2>
                         <p class="product-price">30€</p>
                         <p class="product-description">Una breve descripción del producto.</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="imgs/funda_movil.PNG" alt="Producto 4" class="product-image">
+                    <img src="imgs/Funda.png" alt="Producto 4" class="product-image">
                     <div class="product-info">
                         <h2 class="product-title">Funda para Iphone 15</h2>
                         <p class="product-price">5€</p>
@@ -65,34 +65,58 @@
             <h2>Próximamente</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="imgs/funda_ordenador.PNG" alt="Producto 5" class="product-image">
+                    <img src="imgs/funda_ordenador.png" alt="Producto 5" class="product-image">
                     <div class="product-info">
-                        <h2 class="product-title">Funda Ordenador</h2>
+                        <h2 class="product-title">Laptop Sleeve</h2>
+                        <p class="product-price">19,96€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/Bolsa.png" alt="Producto 6" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Bag</h2>
                         <p class="product-price">20€</p>
                         <p class="product-description">Una breve descripción del producto.</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="imgs/cojin.PNG" alt="Producto 6" class="product-image">
+                    <img src="imgs/mochila.jpg" alt="Producto 7" class="product-image">
                     <div class="product-info">
-                        <h2 class="product-title">Cojín</h2>
-                        <p class="product-price">20€</p>
-                        <p class="product-description">Una breve descripción del producto.</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <img src="imgs/mochila.PNG" alt="Producto 7" class="product-image">
-                    <div class="product-info">
-                        <h2 class="product-title">Mochila</h2>
+                        <h2 class="product-title">Schoolbag</h2>
                         <p class="product-price">30€</p>
                         <p class="product-description">Una breve descripción del producto.</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="imgs/pen.PNG" alt="Producto 8" class="product-image">
+                    <img src="imgs/Alfombrilla.jpg" alt="Producto 8" class="product-image">
                     <div class="product-info">
-                        <h2 class="product-title">USB</h2>
+                        <h2 class="product-title">Mouse Pad</h2>
+                        <p class="product-price">9,99€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/taza.png" alt="Producto 9" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Glossy Mug</h2>
                         <p class="product-price">7€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/libreta.png" alt="Producto 10" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Hardcover Bound Notebook</h2>
+                        <p class="product-price">4€</p>
+                        <p class="product-description">Una breve descripción del producto.</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="imgs/gorrito.png" alt="Producto 11" class="product-image">
+                    <div class="product-info">
+                        <h2 class="product-title">Organic bucket hat</h2>
+                        <p class="product-price">4€</p>
                         <p class="product-description">Una breve descripción del producto.</p>
                     </div>
                 </div>
