--- a/M4/SpaceWars/tienda.html
+++ b/M4/SpaceWars/tienda.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo.webp" alt="Saturno" class="logo">
+        <img src="imgs/logo.jpg" alt="Saturno" class="logo">
         <nav>
             <ul>
                 <li><a href="principal.html">Principal</a></li>
