--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -50,7 +50,7 @@
                 </p>
             </div>
             <div class="column derecha">
-                <img src="imgs/logo_juego.png" alt="Imagen" class="imagen-columna">
+                <img src="imgs/logo.jpg" alt="Imagen" class="imagen-columna">
             </div>
         </section2>
         <section id="github-button">
