--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -21,8 +21,43 @@
 
     <main>
         <div class="title">
-            <h1>Planet Wars</h1>
+            <h1>Tutorial</h1>
         </div>
+
+        <section class="options">
+            <h2>Opciones</h2>
+            <ul>
+                <li><a href="#seccion1">Sección 1</a></li>
+                <li><a href="#seccion2">Sección 2</a></li>
+                <li><a href="#seccion3">Sección 3</a></li>
+                <li><a href="#seccion4">Sección 4</a></li>
+                <li><a href="#seccion5">Sección 5</a></li>
+            </ul>
+        </section>
+
+        <section class="tutorial-content">
+            <h2>Contenido del Tutorial</h2>
+            <div class="tutorial-box" id="seccion1">
+                <h3>Sección 1</h3>
+                <p>Contenido de la sección 1.</p>
+            </div>
+            <div class="tutorial-box" id="seccion2">
+                <h3>Sección 2</h3>
+                <p>Contenido de la sección 2.</p>
+            </div>
+            <div class="tutorial-box" id="seccion3">
+                <h3>Sección 3</h3>
+                <p>Contenido de la sección 3.</p>
+            </div>
+            <div class="tutorial-box" id="seccion4">
+                <h3>Sección 4</h3>
+                <p>Contenido de la sección 4.</p>
+            </div>
+            <div class="tutorial-box" id="seccion5">
+                <h3>Sección 5</h3>
+                <p>Contenido de la sección 5.</p>
+            </div>
+        </section>
     </main>
 
     <footer>
