--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -26,49 +26,49 @@
 
         <div class="about-us">
             <h2>Sobre nosotros</h2>
-            <p>Somos un equipo apasionado de profesionales dedicados a crear experiencias increíbles para nuestros usuarios...</p>
+            <p>We are a team of students passionate about programming and web design. We are dedicated to creating incredible experiences for our users and we have made a video game with Java.</p>
         </div>
         <div class="team-members">
             <div class="team-member">
                 <div class="member-box">
-                    <img src="imgs/franco.webp" alt="Miembro 1" class="member-image">
+                    <img src="imgs/Icono.png" alt="Miembro 1" class="member-image">
                     <div class="member-info">
                         <h2>Mario</h2>
                         <p>Edad: 18</p>
-                        <p>Desarrollador de Aplicaciones Multiplataforma/ Web, especializado en Java.</p>
+                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
                     </div>
                 </div>
             </div>
 
             <div class="team-member">
                 <div class="member-box">
-                    <img src="imgs/Sportacus.jpg" alt="Miembro 2" class="member-image">
+                    <img src="imgs/Icono.png" alt="Miembro 2" class="member-image">
                     <div class="member-info">
                         <h2>Arnau</h2>
                         <p>Edad: 19</p>
-                        <p>Trabajo: Desarrollador de Aplicaciones Multiplataforma / Web, especializado en Java.</p>
+                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
                     </div>
                 </div>
             </div>
 
             <div class="team-member">
                 <div class="member-box">
-                    <img src="imgs/peruano.png" alt="Miembro 3" class="member-image">
+                    <img src="imgs/Icono.png" alt="Miembro 3" class="member-image">
                     <div class="member-info">
                         <h2>Jose</h2>
                         <p>Edad: 19</p>
-                        <p>Desarrollador de Aplicaciones Multiplataforma/ Web, especializado en Java.</p>
+                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
                     </div>
                 </div>
             </div>
 
             <div class="team-member">
                 <div class="member-box">
-                    <img src="imgs/negge.webp" alt="Miembro 4" class="member-image">
+                    <img src="imgs/Icono.png" alt="Miembro 4" class="member-image">
                     <div class="member-info">
                         <h2>Mohammad</h2>
                         <p>Edad: 26</p>
-                        <p>Desarrollador de Aplicaciones Multiplataforma/ Web, especializado en Java.</p>
+                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
                     </div>
                 </div>
             </div>
