--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -11,7 +11,7 @@
         <img src="imgs/logo.jpg" alt="Saturno" class="logo">
         <nav>
             <ul>
-                <li><a href="principal.html">Principal</a></li>
+                <li><a href="principal.html">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="tienda.html">Merchandising</a></li>
@@ -21,11 +21,10 @@
 
     <main>
         <div class="title">
-            <h1>Know Us</h1>
+            <h1>About Us</h1>
         </div>
 
         <div class="about-us">
-            <h2>Sobre nosotros</h2>
             <p>We are a team of students passionate about programming and web design. We are dedicated to creating incredible experiences for our users and we have made a video game with Java.</p>
         </div>
         <div class="team-members">
@@ -34,8 +33,8 @@
                     <img src="imgs/Icono.png" alt="Miembro 1" class="member-image">
                     <div class="member-info">
                         <h2>Mario</h2>
-                        <p>Edad: 18</p>
-                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
+                        <p>Age: 18</p>
+                        <p>Java programming developer, also in web and we make databases.</p>
                     </div>
                 </div>
             </div>
@@ -45,8 +44,8 @@
                     <img src="imgs/Icono.png" alt="Miembro 2" class="member-image">
                     <div class="member-info">
                         <h2>Arnau</h2>
-                        <p>Edad: 19</p>
-                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
+                        <p>Age: 19</p>
+                        <p>Java programming developer, also in web and we make databases.</p>
                     </div>
                 </div>
             </div>
@@ -56,8 +55,8 @@
                     <img src="imgs/Icono.png" alt="Miembro 3" class="member-image">
                     <div class="member-info">
                         <h2>Jose</h2>
-                        <p>Edad: 19</p>
-                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
+                        <p>Age: 19</p>
+                        <p>Java programming developer, also in web and we make databases.</p>
                     </div>
                 </div>
             </div>
@@ -67,8 +66,8 @@
                     <img src="imgs/Icono.png" alt="Miembro 4" class="member-image">
                     <div class="member-info">
                         <h2>Mohammad</h2>
-                        <p>Edad: 26</p>
-                        <p>Desarrollador de programación en Java, también en web y hacemos bases de datos.</p>
+                        <p>Age: 26</p>
+                        <p>Java programming developer, also in web and we make databases.</p>
                     </div>
                 </div>
             </div>
