--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -11,7 +11,7 @@
         <img src="imgs/logo.jpg" alt="Saturno" class="logo">
         <nav>
             <ul>
-                <li><a href="principal.html">Principal</a></li>
+                <li><a href="principal.html">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="tienda.html">Merchandising</a></li>
