--- a/M4/SpaceWars/tienda.html
+++ b/M4/SpaceWars/tienda.html
@@ -11,7 +11,7 @@
         <img src="imgs/logo.jpg" alt="Saturno" class="logo">
         <nav>
             <ul>
-                <li><a href="principal.html">Principal</a></li>
+                <li><a href="principal.html">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="tienda.html">Merchandising</a></li>
@@ -26,12 +26,12 @@
             </div>
         </section>
         <section id="tienda">
-            <h2>Productos Disponibles</h2>
+            <h2>Available products</h2>
             
             <div class="filter-buttons">
-                <button onclick="filterProducts('all')">Todos</button>
-                <button onclick="filterProducts('available')">Disponibles</button>
-                <button onclick="filterProducts('coming-soon')">Próximamente</button>
+                <button onclick="filterProducts('all')">All</button>
+                <button onclick="filterProducts('available')">Available</button>
+                <button onclick="filterProducts('coming-soon')">Soon</button>
             </div>
             
             <div class="product-grid available">
