Adaptado para movil

--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo.jpg" alt="Saturno" class="logo">
+        <div class="logo-container">
+            <img src="imgs/logo.jpg" alt="Saturno" class="logo">
+        </div>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="principal.html">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="tienda.html">Merchandising</a></li>
             </ul>
         </nav>
-        
     </header>
     
     <main>
@@ -42,13 +43,13 @@
         <section id="github-button">
             <a href="https://github.com/KaitoKidd28/Proyect_Arnau_Jose_Mario_Moha/tree/main" class="github-btn" target="_blank">
                 <img src="imgs/github.png" alt="GitHub Logo" class="github-logo">
-                <span>Visita nuestro GitHub</span>
+                <span>Visit our GitHub</span>
             </a>
         </section>
     </main>
 
     <footer>
-        <p>2024 - Página realizada con HTML</p>
+        <p>2024 - Page made with HTML</p>
     </footer>
 </body>
 </html>
