--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-        <p>2024 - Página realizada con HTML</p>
+        <p>2024 - Page made with HTML</p>
     </footer>
 </body>
 </html>
