--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo.jpg" alt="Saturno" class="logo">
+        <div class="logo-container">
+            <img src="imgs/logo.jpg" alt="Saturno" class="logo">
+        </div>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="principal.html">Home</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -18,7 +20,7 @@
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <div class="title">
             <h1>About Us</h1>
@@ -75,7 +77,7 @@
     </main>
 
     <footer>
-        <p>2024 - Página realizada con HTML</p>
+        <p>2024 - Page made with HTML</p>
     </footer>
 </body>
 </html>
