--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -19,27 +19,23 @@
                 <li><a href="tienda.html">Merchandising</a></li>
             </ul>
         </nav>
+        <img src="imgs/cohete.png" alt="Cohete" class="rocket">
     </header>
     
     <main>
         <section id="principal">
             <div class="title">
-                <img src="imgs/cohete.png" alt="Cohete" class="rocket">
                 <h1>Planet Wars</h1>
-                <img src="imgs/cohete.png" alt="Cohete" class="rocket1">
             </div>
         </section>
-        <section2 class="section2">
+        <section class="section2">
             <div class="column izquierda">
-                
-                <p> Planet Wars is a Star Wars style ship war game, what it is about is that you have your planet, with your own troops (ships) and your currency, with that you must attack other planets and thus be able to obtain materials from the enemy to conquer Your planet.
-                    Each planet has its defense troops and its attack troops. In order to create troops, each one has its price and by conquering other planets you will get more materials.
-                    !!!FIGHT TO WIN!!!</p>
+                <p>Planet Wars is a Star Wars style ship war game, what it is about is that you have your planet, with your own troops (ships) and your currency, with that you must attack other planets and thus be able to obtain materials from the enemy to conquer Your planet. Each planet has its defense troops and its attack troops. In order to create troops, each one has its price and by conquering other planets you will get more materials. !!!FIGHT TO WIN!!!</p>
             </div>
             <div class="column derecha">
                 <img src="imgs/logo.jpg" alt="Imagen" class="imagen-columna">
             </div>
-        </section2>
+        </section>
         <section id="github-button">
             <a href="https://github.com/KaitoKidd28/Proyect_Arnau_Jose_Mario_Moha/tree/main" class="github-btn" target="_blank">
                 <img src="imgs/github.png" alt="GitHub Logo" class="github-logo">
