--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -25,33 +25,51 @@
         </div>
 
         <section class="options">
-            <h2>Opciones</h2>
+            <h2>Options</h2>
             <div class="buttons-container">
-                <a href="#functioning" class="button">Functioning</a>
+                <a href="#functioning" class="button">Main Menu</a>
                 <a href="#options" class="button">Options</a>
-                <a href="#sections" class="button">Sections</a>
             </div>
         </section>
 
         <section id="functioning" class="tutorial-content">
-            <h2>Functioning</h2>
+            <h2>Menus</h2>
             <div class="tutorial-box">
-                <h3>Sección 1</h3>
-                <p>Contenido de la sección 1.</p>
+                <img src="imgs/Menuprincipal.png" alt="Functioning" class="tutorial-image">
+                <div class="text-content">
+                    <h3>Main Menu</h3>
+                    <p>This is the main menu in which you can view all the contents of the game.
+                        We have 5 options in which each one does a different thing, which we will explain later.</p>
+                </div>
             </div>
         </section>
         <section id="options" class="tutorial-content">
             <h2>Options</h2>
             <div class="tutorial-box">
-                <h3>Sección 2</h3>
-                <p>Contenido de la sección 2.</p>
+                <img src="imgs/stats.png" alt="Options" class="tutorial-image">
+                <div class="text-content">
+                    <h3>Option 1</h3>
+                    <p>If we go to option 1, we can see the statistics of our planet, which are very necessary when it comes to knowing the resources we have:</p><br>
+                    <ul>
+                        <li>We can see the level of technology of our defenses and our attack artillery.</li><br>
+                        <li>We can also see the defense units we have.</li> <br>
+                        <li>We also have attack units.</li><br>
+                        <li>And finally we have the resources that we currently have to be able to create units.</li><br>
+                    </ul>
+                </div>
             </div>
-        </section>
-        <section id="sections" class="tutorial-content">
-            <h2>Sections</h2>
             <div class="tutorial-box">
-                <h3>Sección 3</h3>
-                <p>Contenido de la sección 3.</p>
+                <img src="imgs/stats.png" alt="Options" class="tutorial-image">
+                <div class="text-content">
+                    <h3>Option 2</h3>
+                    <p>If we go to option 1, we can see the statistics of our planet, which are very necessary when it comes to knowing the resources we have:</p><br>
+                    <ul>
+                        <li>We can see the level of technology of our defenses and our attack artillery.</li><br>
+                        <li>We can also see the defense units we have.</li> <br>
+                        <li>We also have attack units.</li><br>
+                        <li>And finally we have the resources that we currently have to be able to create units.</li><br>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
