--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -31,7 +31,6 @@
                 <a href="#options" class="button">Options</a>
             </div>
         </section>
-
         <section id="functioning" class="tutorial-content">
             <h2>Menus</h2>
             <div class="tutorial-box">
@@ -59,9 +58,20 @@
                 </div>
             </div>
             <div class="tutorial-box">
-                <img src="imgs/stats.png" alt="Options" class="tutorial-image">
+                <img src="imgs/Option2.png" alt="Options" class="tutorial-image">
                 <div class="text-content">
                     <h3>Option 2</h3>
+                    <p>Option 2 will help us create troops, several menus will appear to be able to select the type of troops we want to create, we can choose between defense and attack.
+
+                        Once we have selected the troop we want to create, we can choose how many units we want to create at a cost and if we do not have enough resources, we will get a message that we do not have enough resources.
+                        In the images, we can see the options.
+                        </p><br>
+                </div>
+            </div>
+            <div class="tutorial-box">
+                <img src="imgs/option3.png" alt="Options" class="tutorial-image">
+                <div class="text-content">
+                    <h3>Option 3</h3>
                     <p>If we go to option 1, we can see the statistics of our planet, which are very necessary when it comes to knowing the resources we have:</p><br>
                     <ul>
                         <li>We can see the level of technology of our defenses and our attack artillery.</li><br>
