Tutorial con toda la informacion

--- a/M4/SpaceWars/tutorial.html
+++ b/M4/SpaceWars/tutorial.html
@@ -57,28 +57,38 @@
                     </ul>
                 </div>
             </div>
-            <div class="tutorial-box">
+            <div class="tutorial-box" id="option2">
                 <img src="imgs/Option2.png" alt="Options" class="tutorial-image">
+                <img src="imgs/seleccion_unidades.png" alt="Hover Image 1" class="hover-image">
+                <img src="imgs/creacion_unidades.png" alt="Hover Image 2" class="hover-image">
                 <div class="text-content">
                     <h3>Option 2</h3>
                     <p>Option 2 will help us create troops, several menus will appear to be able to select the type of troops we want to create, we can choose between defense and attack.
-
+            
                         Once we have selected the troop we want to create, we can choose how many units we want to create at a cost and if we do not have enough resources, we will get a message that we do not have enough resources.
                         In the images, we can see the options.
-                        </p><br>
+                    </p><br>
                 </div>
             </div>
+            
             <div class="tutorial-box">
                 <img src="imgs/option3.png" alt="Options" class="tutorial-image">
                 <div class="text-content">
                     <h3>Option 3</h3>
-                    <p>If we go to option 1, we can see the statistics of our planet, which are very necessary when it comes to knowing the resources we have:</p><br>
-                    <ul>
-                        <li>We can see the level of technology of our defenses and our attack artillery.</li><br>
-                        <li>We can also see the defense units we have.</li> <br>
-                        <li>We also have attack units.</li><br>
-                        <li>And finally we have the resources that we currently have to be able to create units.</li><br>
-                    </ul>
+                    <p>Option 3, we can improve the technologies:</p>
+                    <ol>
+                        <li>We can see the level we currently have.</li>
+                        <li>We can see the cost of the upgrade and the total deuterium we currently have to upgrade our troops.</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="tutorial-box" id="option4">
+                <img src="imgs/Option4.png" alt="Options" class="tutorial-image">
+                <img src="imgs/batalla2.png" alt="Hover Image 1" class="hover-image">
+                <img src="imgs/batalla3.png" alt="Hover Image 2" class="hover-image">
+                <div class="text-content">
+                    <h3>Option 4</h3>
+                    <p>In option 4, we can see the battle between the planets and we will get the information about each planet, with its units. We will be able to see what is happening at all times and the battles last 3 minutes.</p><br>
                 </div>
             </div>
         </section>
